load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(glob(["*.c"]))

##########
cc_library(
    name  = "starlark",
    # alwayslink = True,
    # linkstatic = 1,
    srcs  = [
        # "constants.c",
        # "constants.h",
        "nodes.c",
        "nodes.h",
        "parse.c",
        "parse.h",
        "serialize.c",
        "serialize.h",
        "//vendored/logc:log.h"
   ],
    hdrs = [
        "starlark.h",           # api hdr
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",
        "-g", "-O0",
        "-pedantic-errors",
        "-I", ".",
        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)/external/libstarlark/src",

        "-I", "vendored",
        "-I", "vendored/uthash",
        "-I", "$(GENDIR)/vendored/uthash",

        "-I", "vendored/logc",
        "-I", "external/libstarlark/vendored/logc",
    ],
    deps = [
        ":lexis",
        ":syntaxis",
        "//vendored/logc",
        "//vendored/uthash"
    ],
    visibility = ["//visibility:public"]
)

##########
cc_library(
    name  = "syntaxis",
    visibility = ["//visibility:public"],
    srcs  = [
        "syntaxis.c",
        "syntaxis.h",
        "nodes.c",
        "nodes.h",
        "//vendored/logc:log.h",
        # "//vendored/uthash"
    ],
    copts = [
        "-std=c11",
        # "-g",

        "-I", ".",              # syntaxis.h

        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)/external/libstarlark/src",

        "-I", "vendored/logc",
        "-I", "external/libstarlark/vendored/logc",

        "-I", "vendored/uthash",

        "-U", "NDEBUG"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc",
        "//vendored/uthash"
    ]
)

########
genrule(
    name = "gen_syntaxis",
    srcs = [
        "syntaxis.y",
        "//vendored/lemon:lempar.c"
    ],
    tools = ["//vendored/lemon"],
    outs  = [
        "syntaxis.c",
        "syntaxis.out"
    ],
    cmd   = "\n".join([
        "$(location //vendored/lemon) -m \\",
        "$(location syntaxis.y) \\",
        "-T$(location //vendored/lemon:lempar.c) \\",
        "-DTEST \\",
        "-d$(RULEDIR)",
    ]),
    visibility = ["//visibility:public"]
)

###########
cc_library(
    name  = "lexis",
    visibility = ["//visibility:public"],
    srcs  = [
        "lexis.c",
        "lexis.h",
        "nodes.c",
        "nodes.h",
        "debug.c",
        "debug.h",
        "//vendored/logc:log.h",
    ],
    copts = [
        "-std=c11",
        "-I", "src",

        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)/external/libstarlark/src",

        "-I", "vendored/uthash",

        "-I", "vendored/logc",
        "-I", "external/libstarlark/vendored/logc",
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc",
        "//vendored/uthash",
    ]
)

########
genrule(
    name = "gen_lexis",
    srcs = [
        "lexis.re",
        # "test.re",
    ],
    tools = ["//external/re2c"],
    outs  = [
        "lexis.c"
    ],
    cmd   = "\n".join([
        "for f in $(locations //external/re2c)",
        "do",
        "    if [ -f $$f ]",
        "    then",
        "        if [ re2c = `basename $$f` -a -x $$f ]",
        "        then",
        "            break",
        "        fi",
        "    fi",
        "done",
        "$$f --conditions --tags -o $(@D)/lexis.c $(location lexis.re)",
    ]),
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        # "constants.c",
        "parse.c",
        "lexis.c",
        "nodes.c",
        "syntaxis.c",
        "serialize.c",
        "debug.c",
        # "//vendored/uthash",
    ],
    outs = [
        # "constants.h",
        "parse.h",
        "lexis.h",
        "nodes.h",
        "syntaxis.h",
        "serialize.h",
        "debug.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location parse.c)",
        "SRCDIR1=`dirname $$SRC1`",
        # "SRC2=$(location //vendored/uthash/utarray.h)",
        # "SRCDIR2=`dirname $$SRC2`",
        "$(location //vendored/makeheaders) \\",
        # "    $(locations //vendored/uthash) \\",
        # "    $(location constants.c) \\",
        "    $(location parse.c) \\",
        "    $(location lexis.c) \\",
        "    $(location nodes.c) \\",
        "    $(location syntaxis.c) \\",
        "    $(location serialize.c) \\",
        "    $(location debug.c) ",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)

genrule(
    name = "mkhdrs-export",
    srcs = [
        "constants.c",
        "parse.c",
        "lexis.c",
        "nodes.c",
        "syntaxis.h",
        "serialize.c",
        # "debug.c",
        # "test_lex.c",
        # "test_parse.c",
        # "//vendored/uthash",
    ],
    outs = [
        "starlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location parse.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) -H \\",
        # "    $(locations //vendored/uthash) \\",
        "    $(location constants.c) \\",
        "    $(location lexis.c) \\",
        "    $(location nodes.c) \\",
        "    $(location parse.c) \\",
        "    $(location serialize.c) \\",
        "    $(location syntaxis.h) \\",
        # "    $(location debug.c) \\",
        "    > $@",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
