load("@rules_cc//cc:defs.bzl", "cc_library")

test_suite(
    name = "sunlark",
    tests = [
        ":bindings",
        ":attr_set",
        ":common_props",
        # ":definitions",
        ":loadstmts",
        ":make_binding",
        ":packages",
        ":strings",
        ":string_props",
        ":string_set",
        ":targets",
        ":vectors",
        ":vector_strings",
    ])

COPTS = select({
    "//bzl/host:macos": ["-std=c11"],
    "//bzl/host:linux": ["-std=gnu11"],
    "//conditions:default": ["-std=c11"],
}) + [
    "-pedantic-errors",

        "-I$(GENDIR)/test/unit/sunlark",
    "-I$(GENDIR)/external/sealark/test/unit/sunlark",

    "-I$(GENDIR)/bindings/scheme",
    "-I$(GENDIR)/external/sealark/bindings/scheme",

        "-I$(GENDIR)/sealark",
    "-I$(GENDIR)/external/sealark/sealark",

        "-Ivendored/logc",
    "-Iexternal/sealark/vendored/logc",
    "-Ivendored/s7",
    "-Iexternal/sealark/vendored/s7",
    "-Ivendored/unity",
    "-Iexternal/sealark/vendored/unity",
    "-Ivendored/uthash",
    "-Iexternal/sealark/vendored/uthash",
]

DEPS = [
    ":common",
    "//sealark",
    "//bindings/scheme:sunlark",
    "//vendored/logc",
    "//vendored/s7",
    "//vendored/unity",
    "//vendored/uthash",
]

cc_test(
    name = "bindings",
    srcs = ["test_bindings.c", "test_bindings.h"],
    data = [":BUILD.bindings"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "attr_set",
    srcs = ["test_attr_set.c", "test_attr_set.h"],
    data = [":BUILD.attrs"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "common_props",
    args = ["-f", "test/unit/sunlark/BUILD.common_props"],
    data = [":BUILD.common_props"],
    srcs = ["test_common_props.c", "test_common_props.h"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "definitions",
    srcs = ["definitions.c", "definitions.h"],
    data = [":BUILD.test1"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "dictionaries",
    srcs = ["test_dictionaries.c", "test_dictionaries.h"],
    data = [":BUILD.dictionaries"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "loadstmts",
    srcs = ["test_loadstmts.c", "test_loadstmts.h"],
    data = [":BUILD.loadstmts"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "make_binding",
    srcs = ["test_make_binding.c", "test_make_binding.h"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "packages",
    srcs = ["test_packages.c", "test_packages.h"],
    data = [":BUILD.package"],
    copts = COPTS,
    deps = DEPS + [":validators"],
    linkstatic = 1
)

cc_test(
    name = "targets",
    srcs = ["test_targets.c", "test_targets.h"],
    data = [":BUILD.targets"],
    copts = COPTS,
    deps = DEPS + [":validators"],
    linkstatic = 1
)

cc_test(
    name = "string_set",
    srcs = ["test_string_set.c", "test_string_set.h"],
    data = [":BUILD.strings"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "strings",
    srcs = ["test_strings.c", "test_strings.h"],
    data = [":BUILD.strings"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "string_props",
    srcs = ["test_string_props.c", "test_string_props.h"],
    data = [":BUILD.strings"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "vector_strings",
    srcs = ["test_vector_strings.c", "test_vector_strings.h"],
    data = [":BUILD.vectors"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "vectors",
    srcs = ["test_vectors.c", "test_vectors.h"],
    data = [":BUILD.vectors"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_library(
    name = "validators",
    srcs = ["validators.c"],
    hdrs = ["validators.h"],
    copts = COPTS,
    deps = [
        "//vendored/s7",
        "//vendored/unity",
        "//vendored/uthash",
        "//vendored/logc",
        "//sealark",
        "//bindings/scheme:sunlark",
    ]
)

cc_library(
    name = "common",
    srcs = ["common.c"],
    hdrs = ["common.h"],
    copts = COPTS,
    deps = [
        "//vendored/s7",
        "//vendored/unity",
        "//vendored/uthash",
        "//vendored/logc",
        "//sealark",
        "//bindings/scheme:sunlark",
    ]
)

################################################################
genrule(
    name = "mkhdrs",
    srcs = [
        "common.c",
        "validators.c",
        "test_bindings.c",
        "test_attr_set.c",
        "definitions.c",
        "test_common_props.c",
        "test_dictionaries.c",
        "test_loadstmts.c",
        "test_make_binding.c",
        "test_packages.c",
        "test_string_set.c",
        "test_strings.c",
        "test_string_props.c",
        "test_vector_strings.c",
        "test_targets.c",
        "test_vectors.c"
    ],
    outs = [
        "test_attr_set.h",
        "test_bindings.h",
        "definitions.h",
        "test_common_props.h",
        "test_dictionaries.h",
        "test_loadstmts.h",
        "test_make_binding.h",
        "test_packages.h",
        "test_string_set.h",
        "test_strings.h",
        "test_string_props.h",
        "test_vector_strings.h",
        "common.h",
        "validators.h",
        "test_targets.h",
        "test_vectors.h"
    ],
    cmd = "\n".join([
        "SRC1=$(location definitions.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location test_vector_strings.c) \\",
        "    $(location common.c) \\",
        "    $(location validators.c) \\",
        "    $(location definitions.c) \\",
        "    $(location test_common_props.c) \\",
        "    $(location test_loadstmts.c) \\",
        "    $(location test_make_binding.c) \\",
        "    $(location test_packages.c) \\",
        "    $(location test_attr_set.c) \\",
        "    $(location test_bindings.c) \\",
        "    $(location test_string_set.c) \\",
        "    $(location test_strings.c) \\",
        "    $(location test_string_props.c) \\",
        "    $(location test_dictionaries.c) \\",
        "    $(location test_targets.c) \\",
        "    $(location test_vectors.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
