load("@rules_cc//cc:defs.bzl", "cc_library")

test_suite(
    name = "sunlark",
    tests = [
        ":binding_get",
        ":binding_rm",
        ":binding_set",
        ":bool_set",
        ":common_props",
        ":dictionary_get",
        ":dictionary_set",
        # ":definitions",
        ":loadstmts",
        ":make_binding",
        ":make_target",
        ":packages",
        ":string_props",
        ":string_set",
        ":strings",
        ":targets",
        ":vector_strings",
        ":vector_get",
        ":vector_rm",
        ":vector_set",
    ])

COPTS = select({
    "//bzl/host:macos": ["-std=c11"],
    "//bzl/host:linux": ["-std=gnu11"],
    "//conditions:default": ["-std=c11"],
}) + [
    "-pedantic-errors",

        "-I$(GENDIR)/test/unit/sunlark",
    "-I$(GENDIR)/external/sealark/test/unit/sunlark",

    "-I$(GENDIR)/bindings/scheme",
    "-I$(GENDIR)/external/sealark/bindings/scheme",

        "-I$(GENDIR)/sealark",
    "-I$(GENDIR)/external/sealark/sealark",

        "-Ivendored/logc",
    "-Iexternal/sealark/vendored/logc",
    "-Ivendored/s7",
    "-Iexternal/sealark/vendored/s7",
    "-Ivendored/unity",
    "-Iexternal/sealark/vendored/unity",
    "-Ivendored/uthash",
    "-Iexternal/sealark/vendored/uthash",
]

DEPS = [
    ":common",
    "//sealark",
    "//bindings/scheme:sunlark",
    "//vendored/logc",
    "//vendored/s7",
    "//vendored/unity",
    "//vendored/uthash",
]

cc_test(
    name = "binding_get",
    srcs = ["test_binding_get.c", "test_binding_get.h"],
    data = [":BUILD.binding_get"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "binding_rm",
    srcs = ["test_binding_rm.c", "test_binding_rm.h"],
    data = [":BUILD.binding_rm"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "binding_set",
    srcs = ["test_binding_set.c", "test_binding_set.h"],
    data = [":BUILD.binding_set"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "bool_set",
    srcs = ["test_bool_set.c", "test_bool_set.h"],
    data = [":BUILD.bool_set"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "common_props",
    args = ["-f", "test/unit/sunlark/BUILD.common_props"],
    data = [":BUILD.common_props"],
    srcs = ["test_common_props.c", "test_common_props.h"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "definitions",
    srcs = ["definitions.c", "definitions.h"],
    data = [":BUILD.test1"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "dictionary_get",
    srcs = ["test_dictionary_get.c", "test_dictionary_get.h"],
    data = [":BUILD.dictionaries"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "dictionary_set",
    srcs = ["test_dictionary_set.c", "test_dictionary_set.h"],
    data = [":BUILD.dictionaries"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "loadstmts",
    srcs = ["test_loadstmts.c", "test_loadstmts.h"],
    data = [":BUILD.loadstmts"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "make_binding",
    srcs = ["test_make_binding.c", "test_make_binding.h"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "make_target",
    srcs = ["test_make_target.c", "test_make_target.h"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "packages",
    srcs = ["test_packages.c", "test_packages.h"],
    data = [":BUILD.package"],
    copts = COPTS,
    deps = DEPS + [":validators"],
    linkstatic = 1
)

cc_test(
    name = "targets",
    srcs = ["test_targets.c", "test_targets.h"],
    data = [":BUILD.targets"],
    copts = COPTS,
    deps = DEPS + [":validators"],
    linkstatic = 1
)

cc_test(
    name = "string_set",
    srcs = ["test_string_set.c", "test_string_set.h"],
    data = [":BUILD.strings"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "strings",
    srcs = ["test_strings.c", "test_strings.h"],
    data = [":BUILD.strings"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "string_props",
    srcs = ["test_string_props.c", "test_string_props.h"],
    data = [":BUILD.strings"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "vector_strings",
    srcs = ["test_vector_strings.c", "test_vector_strings.h"],
    data = [":BUILD.vectors"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "vector_get",
    srcs = ["test_vector_get.c", "test_vector_get.h"],
    data = [":BUILD.vector_get"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "vector_rm",
    srcs = ["test_vector_rm.c", "test_vector_rm.h"],
    data = [":BUILD.vector_set"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_test(
    name = "vector_set",
    srcs = ["test_vector_set.c", "test_vector_set.h"],
    data = [":BUILD.vector_set"],
    copts = COPTS,
    deps = DEPS,
    linkstatic = 1
)

cc_library(
    name = "validators",
    srcs = ["validators.c"],
    hdrs = ["validators.h"],
    copts = COPTS,
    deps = [
        "//vendored/s7",
        "//vendored/unity",
        "//vendored/uthash",
        "//vendored/logc",
        "//sealark",
        "//bindings/scheme:sunlark",
    ]
)

cc_library(
    name = "common",
    srcs = ["common.c"],
    hdrs = ["common.h"],
    copts = COPTS,
    deps = [
        "//vendored/s7",
        "//vendored/unity",
        "//vendored/uthash",
        "//vendored/logc",
        "//sealark",
        "//bindings/scheme:sunlark",
    ]
)

################################################################
genrule(
    name = "mkhdrs",
    srcs = [
        "common.c",
        "validators.c",
        "test_binding_get.c",
        "test_binding_rm.c",
        "test_binding_set.c",
        "test_bool_set.c",
        "definitions.c",
        "test_common_props.c",
        "test_dictionary_get.c",
        "test_dictionary_set.c",
        "test_loadstmts.c",
        "test_make_binding.c",
        "test_make_target.c",
        "test_packages.c",
        "test_string_set.c",
        "test_strings.c",
        "test_string_props.c",
        "test_vector_strings.c",
        "test_targets.c",
        "test_vector_get.c",
        "test_vector_rm.c",
        "test_vector_set.c"
    ],
    outs = [
        "test_binding_set.h",
        "test_binding_rm.h",
        "test_binding_get.h",
        "test_bool_set.h",
        "definitions.h",
        "test_common_props.h",
        "test_dictionary_get.h",
        "test_dictionary_set.h",
        "test_loadstmts.h",
        "test_make_binding.h",
        "test_make_target.h",
        "test_packages.h",
        "test_string_set.h",
        "test_strings.h",
        "test_string_props.h",
        "test_vector_strings.h",
        "common.h",
        "validators.h",
        "test_targets.h",
        "test_vector_get.h",
        "test_vector_rm.h",
        "test_vector_set.h"
    ],
    cmd = "\n".join([
        "SRC1=$(location definitions.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location test_vector_strings.c) \\",
        "    $(location common.c) \\",
        "    $(location validators.c) \\",
        "    $(location definitions.c) \\",
        "    $(location test_common_props.c) \\",
        "    $(location test_loadstmts.c) \\",
        "    $(location test_make_binding.c) \\",
        "    $(location test_make_target.c) \\",
        "    $(location test_packages.c) \\",
        "    $(location test_binding_set.c) \\",
        "    $(location test_binding_rm.c) \\",
        "    $(location test_binding_get.c) \\",
        "    $(location test_bool_set.c) \\",
        "    $(location test_string_set.c) \\",
        "    $(location test_strings.c) \\",
        "    $(location test_string_props.c) \\",
        "    $(location test_dictionary_get.c) \\",
        "    $(location test_dictionary_set.c) \\",
        "    $(location test_targets.c) \\",
        "    $(location test_vector_get.c) \\",
        "    $(location test_vector_rm.c) \\",
        "    $(location test_vector_set.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
